# work-statistics-bot

./: .gitignore  Dockerfile  bot.py  bot_base.py  docker-compose.yml  old_conversation_backup.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: main_work-corrective-bot.yml
conversation/: engine.py  message_types.py
conversation/content/: afternoon_conversation.py  generic_messages.py  monthly_conversation.py  morning_conversation.py  questionaire_conversation.py  questionnaire_evaluation.py  setup_conversation.py  weekly_conversation.py
freeform_chat/: freeform_client.py  freeform_client_base.py  gpt_freeform_client.py
statistics/: chart_generator.py  data_generator.py  mood_colors.py
