[tool.poetry]
name = "mental-health-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Dominik Juelg <dominik.juelg@petleo.net>"]
readme = "README.md"
packages = [{include = "mental_health_telegram_bot"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = {version = "^20.8", extras = ["job-queue", "webhooks"]}
matplotlib = "^3.7.5"
numpy = "^1.26.4"
openai = "^1.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"